# FundMyGoals

./: .gitignore  Cargo.toml  README.md
contract-deployer/: Cargo.toml
contract-deployer/src/: lib.rs  test.rs
scripts/: 1_deploy_futurenet.sh  1_install_tip_contract.sh  2_deploy_deployer.sh  2_init_contract.sh  3_init_contract.sh  3_tip.sh  4_tip.sh  4_withdraw.sh  5_get_scoreboard.sh  5_withdraw.sh  6_get_scoreboard.sh  8_fetch_events.sh  contract.txt  deploy_local.sh  invoke.sh  invoke_authorized.sh
scripts/helpers/: get_stellar_asset_id.py
tip-contract/: Cargo.toml
tip-contract/examples/: example.rs
tip-contract/src/: datatypes.rs  lib.rs  test.rs
tip-deployer/: Cargo.toml
tip-deployer/src/: lib.rs
